[package]
  name = "typenum-macro"
  version = "0.1.0"
  authors = [
    "Paho Lurie-Gregg <paho@paholg.com>",
    "Andre Bogus <bogusandre@gmail.com>"
  ]
  documentation = "https://docs.rs/typenum"
  repository = "https://github.com/paholg/typenum"
  readme = "README.md"
  license = "MIT/Apache-2.0"
  description = "Macros for typenum crate"
  edition = "2018"

[lib]
  proc-macro = true

[dependencies]
  proc-macro2 = "1.0.3"
  syn = { version = "1.0.5", features = ["extra-traits"] }
  quote = "1.0.2"
